# ai_analyzer_service

./: .dockerignore  .gitignore  Dockerfile  README.md  ans_exemple.txt  docker-compose.yml  entrypoint.sh  locustfile.py  main.py  pyproject.toml  requirements.txt
app/: config.py  logger.py  main.py
app/api/: dependencies.py
app/api/routes/: analysis.py  health.py  load_test.py
app/api/schemas/: analysis.py
app/api/services/: analysis_cache.py  analysis_storage.py  analyzer.py  auth.py  diary.py  gigachat_auth.py  gigachat_client.py  prompt_builder.py  redis_client.py
app/models/: analysis.py  database.py
app/tasks/: __init__.py  analysis_tasks.py  celery_app.py
