[project]
name = "ai-analyzer-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.27",
    "redis>=7.4.0",
    "uvicorn>=0.46.0",
]
